# shinbot-plugins

./: .gitignore  README.md  plugins.json  pyproject.toml
.github/workflows/: ci.yml
plugins/shinbot_converter_astrbot/: metadata.json  pyproject.toml
plugins/shinbot_converter_astrbot/shinbot_converter_astrbot/: __init__.py  installer.py  loader.py  translator.py
plugins/shinbot_converter_astrbot/shinbot_converter_astrbot/astrbot/: __init__.py  _registry.py
plugins/shinbot_converter_astrbot/shinbot_converter_astrbot/astrbot/api/: __init__.py  message_components.py  platform.py  provider.py  star.py
plugins/shinbot_converter_astrbot/shinbot_converter_astrbot/astrbot/api/event/: __init__.py
plugins/shinbot_converter_astrbot/shinbot_converter_astrbot/astrbot/api/event/filter/: __init__.py
plugins/shinbot_converter_astrbot/shinbot_converter_astrbot/astrbot/core/: __init__.py
plugins/shinbot_converter_astrbot/shinbot_converter_astrbot/astrbot/core/message/: __init__.py  components.py
plugins/shinbot_converter_astrbot/shinbot_converter_astrbot/astrbot/core/star/: __init__.py
plugins/shinbot_converter_astrbot/shinbot_converter_astrbot/astrbot/core/utils/: __init__.py  astrbot_path.py
plugins/shinbot_converter_astrbot/shinbot_converter_astrbot/shim/: __init__.py  config.py  context.py  event.py  kv.py  provider.py  schema_converter.py  virtual_plugin.py
plugins/shinbot_plugin_minesweeper/: DESIGN.md  README.md  metadata.json  pyproject.toml
plugins/shinbot_plugin_minesweeper/shinbot_plugin_minesweeper/: __init__.py  engine.py  models.py  parser.py  renderer.py  store.py
plugins/shinbot_plugin_minesweeper/shinbot_plugin_minesweeper/templates/: board.svg.j2
plugins/shinbot_plugin_minesweeper/tests/: conftest.py  test_engine.py  test_parser.py  test_plugin_entry.py  test_renderer.py  test_store.py
plugins/shinbot_plugin_renderkit/: DESIGN.md  README.md  metadata.json  pyproject.toml
plugins/shinbot_plugin_renderkit/shinbot_plugin_renderkit/: __init__.py  api.py  backends.py  models.py  template.py
plugins/shinbot_plugin_renderkit/tests/: conftest.py  test_api.py  test_backends.py  test_renderkit_plugin_entry.py
