[project]
name = "shinbot-plugin-minesweeper"
version = "0.2.1"
description = "Session-scoped chat minesweeper plugin for ShinBot."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
]

[tool.setuptools.package-data]
shinbot_plugin_minesweeper = ["templates/*.j2"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
