[project]
name = "shinbot-plugin-renderkit"
version = "0.1.0"
description = "General-purpose HTML/CSS rendering utilities for ShinBot plugins."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.45.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
